--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/base.css">
-    <link rel="stylesheet" type="text/css" href="css/layouts.css">
-    <link rel="stylesheet" type="text/css" href="css/modules.css">
-    <title>The Gallery of Horns</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <header>
-      <h1>The Gallery of Horns</h1>
-      <select>
-        <option value="dropdown">Filter by Keyword</option>
-      </select>
-    </header>
-    <main>
-      <section id="photo-template">
-        <h2></h2>
-        <!-- <h3></h3> -->
-        <img src="" alt="">
-        <p></p>
-      </section>
-    </main>
-    <footer>
-      &copy; 2018 Code Fellows
-    </footer>
+<head>
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <link rel="stylesheet" type="text/css" href="css/layouts.css">
+  <link rel="stylesheet" type="text/css" href="css/modules.css">
+  <title>The Gallery of Horns</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script id="horns-template" type="text/x-handlebars-template">
+    <div id="photo-template" class={{keyword}}>
+      <h2>{{title}}</h2>
+      <img src="{{image_url}}" alt="{{title}}">
+    </div>
+  </script>
+</head>
+
+<body>
+  <header>
+    <h1>The Gallery of Horns</h1>
+    <select>
+      <option value="dropdown">Filter by Keyword</option>
+    </select>
+  </header>
+  <main>
+    <section id="list"></section>
+  </main>
+  <footer>
+    &copy; 2018 Code Fellows
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.3/handlebars.js"></script>
   <script src="js/app.js"></script>
-  </body>
+</body>
+
 </html>
